# OpenCV_Utility

./: README.md
BasicImageUtility/: CMakeLists.txt  ImageUtility.cpp
BasicImageUtility/UtilityFunctions/: CMakeLists.txt  Utility.cpp  Utility.hpp
